# src/main/java/com/usermanagement/model/dto/response/UserResponse.java
@@ -1,5 +1,322 @@
-package com.usermanagement.model.dto.response;
+package com.usermanagement.model.dto;
 
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonValue;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * UserResponse
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-01-06T20:29:17.437296100+02:00[Africa/Cairo]", comments = "Generator version: 7.10.0")
 public class UserResponse {
 
+  private Integer id;
+
+  private String userName;
+
+  private String email;
+
+  private String fullName;
+
+  private String mobileNumber;
+
+  private String role;
+
+  /**
+   * The gender of the user
+   */
+  public enum GenderEnum {
+    MALE("MALE"),
+    
+    FEMALE("FEMALE");
+
+    private String value;
+
+    GenderEnum(String value) {
+      this.value = value;
+    }
+
+    @JsonValue
+    public String getValue() {
+      return value;
+    }
+
+    @Override
+    public String toString() {
+      return String.valueOf(value);
+    }
+
+    @JsonCreator
+    public static GenderEnum fromValue(String value) {
+      for (GenderEnum b : GenderEnum.values()) {
+        if (b.value.equals(value)) {
+          return b;
+        }
+      }
+      throw new IllegalArgumentException("Unexpected value '" + value + "'");
+    }
+  }
+
+  private GenderEnum gender;
+
+  /**
+   * The account status of the user
+   */
+  public enum StatusEnum {
+    ACTIVE("ACTIVE"),
+    
+    INACTIVE("INACTIVE");
+
+    private String value;
+
+    StatusEnum(String value) {
+      this.value = value;
+    }
+
+    @JsonValue
+    public String getValue() {
+      return value;
+    }
+
+    @Override
+    public String toString() {
+      return String.valueOf(value);
+    }
+
+    @JsonCreator
+    public static StatusEnum fromValue(String value) {
+      for (StatusEnum b : StatusEnum.values()) {
+        if (b.value.equals(value)) {
+          return b;
+        }
+      }
+      throw new IllegalArgumentException("Unexpected value '" + value + "'");
+    }
+  }
+
+  private StatusEnum status;
+
+  public UserResponse id(Integer id) {
+    this.id = id;
+    return this;
+  }
+
+  /**
+   * The unique ID of the user
+   * @return id
+   */
+  
+  @Schema(name = "id", description = "The unique ID of the user", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("id")
+  public Integer getId() {
+    return id;
+  }
+
+  public void setId(Integer id) {
+    this.id = id;
+  }
+
+  public UserResponse userName(String userName) {
+    this.userName = userName;
+    return this;
+  }
+
+  /**
+   * The username of the user
+   * @return userName
+   */
+  
+  @Schema(name = "userName", description = "The username of the user", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("userName")
+  public String getUserName() {
+    return userName;
+  }
+
+  public void setUserName(String userName) {
+    this.userName = userName;
+  }
+
+  public UserResponse email(String email) {
+    this.email = email;
+    return this;
+  }
+
+  /**
+   * The email address of the user
+   * @return email
+   */
+  @jakarta.validation.constraints.Email 
+  @Schema(name = "email", description = "The email address of the user", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("email")
+  public String getEmail() {
+    return email;
+  }
+
+  public void setEmail(String email) {
+    this.email = email;
+  }
+
+  public UserResponse fullName(String fullName) {
+    this.fullName = fullName;
+    return this;
+  }
+
+  /**
+   * The full name of the user
+   * @return fullName
+   */
+  
+  @Schema(name = "fullName", description = "The full name of the user", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("fullName")
+  public String getFullName() {
+    return fullName;
+  }
+
+  public void setFullName(String fullName) {
+    this.fullName = fullName;
+  }
+
+  public UserResponse mobileNumber(String mobileNumber) {
+    this.mobileNumber = mobileNumber;
+    return this;
+  }
+
+  /**
+   * The mobile number of the user
+   * @return mobileNumber
+   */
+  
+  @Schema(name = "mobileNumber", description = "The mobile number of the user", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("mobileNumber")
+  public String getMobileNumber() {
+    return mobileNumber;
+  }
+
+  public void setMobileNumber(String mobileNumber) {
+    this.mobileNumber = mobileNumber;
+  }
+
+  public UserResponse role(String role) {
+    this.role = role;
+    return this;
+  }
+
+  /**
+   * The role of the user
+   * @return role
+   */
+  
+  @Schema(name = "role", description = "The role of the user", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("role")
+  public String getRole() {
+    return role;
+  }
+
+  public void setRole(String role) {
+    this.role = role;
+  }
+
+  public UserResponse gender(GenderEnum gender) {
+    this.gender = gender;
+    return this;
+  }
+
+  /**
+   * The gender of the user
+   * @return gender
+   */
+  
+  @Schema(name = "gender", description = "The gender of the user", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("gender")
+  public GenderEnum getGender() {
+    return gender;
+  }
+
+  public void setGender(GenderEnum gender) {
+    this.gender = gender;
+  }
+
+  public UserResponse status(StatusEnum status) {
+    this.status = status;
+    return this;
+  }
+
+  /**
+   * The account status of the user
+   * @return status
+   */
+  
+  @Schema(name = "status", description = "The account status of the user", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("status")
+  public StatusEnum getStatus() {
+    return status;
+  }
+
+  public void setStatus(StatusEnum status) {
+    this.status = status;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    UserResponse userResponse = (UserResponse) o;
+    return Objects.equals(this.id, userResponse.id) &&
+        Objects.equals(this.userName, userResponse.userName) &&
+        Objects.equals(this.email, userResponse.email) &&
+        Objects.equals(this.fullName, userResponse.fullName) &&
+        Objects.equals(this.mobileNumber, userResponse.mobileNumber) &&
+        Objects.equals(this.role, userResponse.role) &&
+        Objects.equals(this.gender, userResponse.gender) &&
+        Objects.equals(this.status, userResponse.status);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, userName, email, fullName, mobileNumber, role, gender, status);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class UserResponse {\n");
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    userName: ").append(toIndentedString(userName)).append("\n");
+    sb.append("    email: ").append(toIndentedString(email)).append("\n");
+    sb.append("    fullName: ").append(toIndentedString(fullName)).append("\n");
+    sb.append("    mobileNumber: ").append(toIndentedString(mobileNumber)).append("\n");
+    sb.append("    role: ").append(toIndentedString(role)).append("\n");
+    sb.append("    gender: ").append(toIndentedString(gender)).append("\n");
+    sb.append("    status: ").append(toIndentedString(status)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
 }
+
