# src/main/java/com/usermanagement/model/entity/Gender.java
@@ -1,5 +1,0 @@
-package com.usermanagement.model.entity;
-
-public enum Gender {
-    MALE, FEMALE
-}
