# src/main/java/com/usermanagement/model/enums/Genders.java
@@ -1,0 +1,5 @@
+package com.usermanagement.model.enums;
+
+public enum Genders {
+    MALE, FEMALE
+}
